feat: docker compose process for deps and apps

--- a/.github/workflows/stage-3-build-images.yaml
+++ b/.github/workflows/stage-3-build-images.yaml
@@ -387,7 +387,8 @@ jobs:
           free -h
 
       - name: Run snapshot tests
-        run: bash tests/snapshot-tests/run-snapshot-tests.sh
+        working-directory: ${{ inputs.snapshot_test_dir }}
+        run: bash run-snapshot-tests.sh
 
       - name: Teardown application
         working-directory: ${{ env.APP_DIR }}
