--- a/.github/workflows/stage-3-build-images.yaml
+++ b/.github/workflows/stage-3-build-images.yaml
@@ -339,7 +339,7 @@ jobs:
         working-directory: ${{ inputs.app_dir }}
         env:
           PROJECT_NAME: ${{ inputs.project_name }}
-          FUNC_NAMES: ${{ steps.get-function-names.outputs.FUNC_NAMES }}
+          FUNC_NAMES: ${{ needs.get-function-names.outputs.FUNC_NAMES }}
         run: |
 
           echo "Testing the access to get-functions output"
