--- a/.github/workflows/stage-3-build-images.yaml
+++ b/.github/workflows/stage-3-build-images.yaml
@@ -350,6 +350,11 @@ jobs:
           echo "Generating compose.ghcr.yaml file..."
           echo "services:" > compose.ghcr.yaml
           for function in $(echo '${{ needs.get-functions.outputs.FUNC_NAMES }}' | jq -r '.[]'); do
+            # Skipping services we don't need during local testing on the agent
+            if [[ "$function" == "web" || "$function" == "wiremock" ]]; then
+              echo "Skipping ${function}..."
+              continue
+            fi
             RAW_IMAGE_URL="${{ inputs.gh_registry }}/${{ github.repository_owner }}/${PROJECT_NAME}-${function}:latest"
             LOWERCASE_IMAGE_URL="${RAW_IMAGE_URL,,}"
             echo "  ${function}:" >> compose.ghcr.yaml
