--- a/tests/snapshot-tests/snapshot-tests.csproj
+++ b/tests/snapshot-tests/snapshot-tests.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
     <PackageReference Include="MSTest" Version="3.8.2" />
     <PackageReference Include="Verify.MSTest" Version="28.13.0" />
+    <PackageReference Include="DotNetEnv" Version="3.1.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -31,6 +32,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="AMENDED_MASTER_2_BSO_CODE_1B8F53_-_CAAS_BREAST_SCREENING_COHORT.parquet">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="../../application/CohortManager/.env">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
