fix: debug db conn issues

--- a/.github/workflows/stage-3-build-images.yaml
+++ b/.github/workflows/stage-3-build-images.yaml
@@ -404,6 +404,9 @@ jobs:
           df -h
           echo "--- MEMORY ---"
           free -h
+      
+      - name: print DB logs
+        run: docker logs db
 
       - name: Run snapshot tests
         working-directory: ${{ inputs.snapshot_test_dir }}
