fix: update to use one --parameters flag in stage 4 deploy yaml

--- a/.github/workflows/stage-4-deploy.yaml
+++ b/.github/workflows/stage-4-deploy.yaml
@@ -82,14 +82,17 @@ jobs:
           # Derive the short SHA from the provided commit
           git_short_sha=$(git rev-parse --short "$COMMIT_SHA")
 
+          # Build parameters JSON to pass multiple values safely
+          param_json=$(printf '{"dockerImageTag":"%s","testTypes":"[%s]"}' \
+            "$git_short_sha" "${test_types[$ENVIRONMENT_NAME]}")
+
           echo "Starting Azure devops pipeline \"Deploy to Azure - Core ${ENVIRONMENT_NAME}\"..."
           RUN_ID=$(az pipelines run \
             --commit-id "$COMMIT_SHA" \
             --name "Deploy to Azure - Core ${ENVIRONMENT_NAME}" \
             --org "${organisation}" \
             --project "${project_name}" \
-            --parameters "dockerImageTag=${git_short_sha}" \
-            --parameters "testTypes=[${test_types[$ENVIRONMENT_NAME]}]" \
+            --parameters "$param_json" \
             --output tsv --query id)
 
           echo "Click here to view the ADO pipeline: ${organisation}/${project_name}/_build/results?buildId=${RUN_ID}"
