--- a/application/CohortManager/src/Functions/CaasIntegration/receiveCaasFile/Dockerfile
+++ b/application/CohortManager/src/Functions/CaasIntegration/receiveCaasFile/Dockerfile
@@ -18,7 +18,7 @@ COPY ./CaasIntegration/receiveCaasFile /src/dotnet-function-app
 WORKDIR /src/dotnet-function-app
 
 RUN --mount=type=cache,target=/root/.nuget/packages \
-    dotnet publish *.csproj --output /home/site/wwwroot
+    dotnet publish ./*.csproj --output /home/site/wwwroot
 
 # To enable ssh & remote debugging on app service change the base image to the one below
 # FROM mcr.microsoft.com/azure-functions/dotnet-isolated:4-dotnet-isolated8.0-appservice
