--- a/.github/workflows/stage-2-analyse.yaml
+++ b/.github/workflows/stage-2-analyse.yaml
@@ -34,6 +34,12 @@ on:
         description: Version of the software
         required: true
         type: string
+
+    secrets:
+      sonar_token:
+        description: 'The SONAR_TOKEN for code scanning.'
+        required: true
+
 jobs:
   perform-static-analysis:
     name: Perform static analysis
@@ -54,6 +60,6 @@ jobs:
         with:
           sonar_organisation_key: ${{ vars.SONAR_ORGANISATION_KEY }}
           sonar_project_key: ${{ vars.SONAR_PROJECT_KEY }}
-          sonar_token: ${{ secrets.SONAR_TOKEN }}
+          sonar_token: ${{ secrets.sonar_token }}
           coverage_path: "coverage"
           unit_test_dir: ${{ inputs.unit_test_dir }} # Added unit_test_dir parameter
