--- a/scripts/backups/db-restore-container/Dockerfile
+++ b/scripts/backups/db-restore-container/Dockerfile
@@ -2,16 +2,16 @@
 FROM mcr.microsoft.com/powershell:latest
 
 # Create a non-root user and group
-RUN groupadd -r appgroup && useradd -r -g appgroup appuser \
+RUN groupadd -r appgroup && useradd -r -g appgroup appuser
 
 # Update package lists and install wget and unzip.
-&& apt-get update && apt-get --no-install-recommends install -y wget unzip \
+RUN apt-get update && apt-get --no-install-recommends install -y wget unzip
 
 # Install the Az PowerShell module for Azure authentication
-&& pwsh -Command "Install-Module -Name Az.Accounts -RequiredVersion 2.12.0 -Force -Scope AllUsers" \
+RUN pwsh -Command "Install-Module -Name Az.Accounts -RequiredVersion 2.12.0 -Force -Scope AllUsers"
 
 # Install SqlPackage.
-ADD -O sqlpackage.zip https://aka.ms/sqlpackage-linux \
+RUN wget -O sqlpackage.zip https://aka.ms/sqlpackage-linux \
     && mkdir /opt/sqlpackage \
     && unzip sqlpackage.zip -d /opt/sqlpackage \
     && rm sqlpackage.zip \
