--- a/.github/workflows/cicd-4-manual-rebuild.yaml
+++ b/.github/workflows/cicd-4-manual-rebuild.yaml
@@ -17,6 +17,11 @@ jobs:
   manual-build-and-push-images:
     name: Manual Build and Push all images
     uses: NHSDigital/dtos-devops-templates/.github/workflows/stage-3-build-images.yaml@main
+    secrets:
+      client_id: ${{ secrets.AZURE_CLIENT_ID }}
+      tenant_id: ${{ secrets.AZURE_TENANT_ID }}
+      subscription_id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      acr_name: ${{ secrets.ACR_NAME }}
     with:
       docker_compose_file: application/CohortManager/compose.yaml
       excluded_containers_csv_list: azurite,azurite-setup,sql-server
@@ -24,4 +29,3 @@ jobs:
       function_app_source_code_path: application/CohortManager/src
       project_name: cohort-manager
       build_all_images: true
-    secrets: inherit
