fix: replace wget with curl in Dockerfiles for consistency and reliability - fixing sonar issue regarding redirects

--- a/scripts/backups/db-restore-container/Dockerfile
+++ b/scripts/backups/db-restore-container/Dockerfile
@@ -4,14 +4,14 @@ FROM mcr.microsoft.com/powershell:latest
 # Create a non-root user and group
 RUN groupadd -r appgroup && useradd -r -g appgroup appuser
 
-# Update package lists and install wget and unzip.
-RUN apt-get update && apt-get --no-install-recommends install -y wget unzip
+# Update package lists and install curl and unzip.
+RUN apt-get update && apt-get --no-install-recommends install -y curl unzip
 
 # Install the Az PowerShell module for Azure authentication
 RUN pwsh -Command "Install-Module -Name Az.Accounts -RequiredVersion 2.12.0 -Force -Scope AllUsers"
 
 # Install SqlPackage.
-RUN wget -O sqlpackage.zip https://aka.ms/sqlpackage-linux \
+RUN curl --proto "=https" --tlsv1.2 -sSfL -o sqlpackage.zip https://aka.ms/sqlpackage-linux \
     && mkdir /opt/sqlpackage \
     && unzip sqlpackage.zip -d /opt/sqlpackage \
     && rm sqlpackage.zip \
