--- a/scripts/backups/db-backup-container/Dockerfile
+++ b/scripts/backups/db-backup-container/Dockerfile
@@ -7,7 +7,7 @@ RUN groupadd -r appgroup && useradd -r -g appgroup appuser
 # Update package lists and install required tools.
 # 'lsb-release' is added to fix the 'lsb_release: not found' error.
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    wget \
+    curl \
     unzip \
     gnupg \
     lsb-release \
@@ -17,7 +17,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 RUN pwsh -Command "Install-Module -Name Az.Accounts -RequiredVersion 2.12.0 -Force -Scope AllUsers"
 
 # Install SqlPackage by downloading the binary.
-RUN wget -O sqlpackage.zip https://aka.ms/sqlpackage-linux \
+RUN curl --proto "=https" --tlsv1.2 -sSfL -o sqlpackage.zip https://aka.ms/sqlpackage-linux \
     && mkdir /opt/sqlpackage \
     && unzip sqlpackage.zip -d /opt/sqlpackage \
     && rm sqlpackage.zip \
@@ -26,7 +26,7 @@ RUN wget -O sqlpackage.zip https://aka.ms/sqlpackage-linux \
 # Install AzCopy from the Microsoft repository.
 # The 'sh -c' command is fixed to correctly interpret 'lsb_release -cs'.
 # We also ensure the apt cache is updated before installing AzCopy.
-RUN wget -qO- https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > packages.microsoft.gpg \
+RUN curl --proto "=https" --tlsv1.2 -sSfL https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > packages.microsoft.gpg \
     && install -o root -g root -m 644 packages.microsoft.gpg /etc/apt/trusted.gpg.d/ \
     && sh -c "echo 'deb [arch=amd64,arm64,armhf] https://packages.microsoft.com/ubuntu/22.04/prod $(lsb_release -cs) main' > /etc/apt/sources.list.d/microsoft-prod.list" \
     && rm packages.microsoft.gpg \
