--- a/.azuredevops/pipelines/task_azure_sql_scaling_preprod.yaml
+++ b/.azuredevops/pipelines/task_azure_sql_scaling_preprod.yaml
@@ -52,53 +52,8 @@ variables:
   - group: PRE_core_backend
 
 stages:
-  - stage: ScaleDatabase
-    jobs:
-      - job: SetVariablesJob
-        displayName: Set Environment-Specific Variables
-        steps:
-          - task: Bash@3
-            displayName: Set Environment-Specific Variables
-            name: SetVariables
-            inputs:
-              targetType: inline
-              script: |
-                echo "##vso[task.setvariable variable=resourceGroupName;isOutput=true]rg-cohman-$(ENVIRONMENT_SHORT)-uks"
-                echo "##vso[task.setvariable variable=serverName;isOutput=true]sqlsvr-cohman-$(ENVIRONMENT_SHORT)-uks"
-                echo "##vso[task.setvariable variable=databaseName;isOutput=true]DToSDB"
-
-      - job: ScaleUpDatabaseJob
-        displayName: 'Azure CLI - Scale Up'
-        condition: and(succeeded(), or(eq(variables['Build.CronSchedule.DisplayName'], 'Scale_Peak'), eq('${{ parameters.manualOverride }}', 'Scale_Peak')))
-        dependsOn: SetVariablesJob
-        variables:
-          resourceGroupName: $[ dependencies.SetVariablesJob.outputs['SetVariables.resourceGroupName'] ]
-          serverName: $[ dependencies.SetVariablesJob.outputs['SetVariables.serverName'] ]
-          databaseName: $[ dependencies.SetVariablesJob.outputs['SetVariables.databaseName'] ]
-        steps:
-        - template: .azuredevops/templates/steps/azure_sql_scale.yaml@dtos-devops-templates
-          parameters:
-            serviceConnection: $(SERVICE_CONNECTION)
-            subscriptionId: $(TF_VAR_TARGET_SUBSCRIPTION_ID)
-            resourceGroupName: $(resourceGroupName)
-            serverName: $(serverName)
-            databaseName: $(databaseName)
-            sku: ${{ parameters.Sku_Peak }}
-
-      - job: ScaleDownDatabaseJob
-        displayName: 'Azure CLI - Scale Down'
-        condition: and(succeeded(), or(eq(variables['Build.CronSchedule.DisplayName'], 'Scale_OffPeak'), eq('${{ parameters.manualOverride }}', 'Scale_OffPeak')))
-        dependsOn: SetVariablesJob
-        variables:
-          resourceGroupName: $[ dependencies.SetVariablesJob.outputs['SetVariables.resourceGroupName'] ]
-          serverName: $[ dependencies.SetVariablesJob.outputs['SetVariables.serverName'] ]
-          databaseName: $[ dependencies.SetVariablesJob.outputs['SetVariables.databaseName'] ]
-        steps:
-        - template: .azuredevops/templates/steps/azure_sql_scale.yaml@dtos-devops-templates
-          parameters:
-            serviceConnection: $(SERVICE_CONNECTION)
-            subscriptionId: $(TF_VAR_TARGET_SUBSCRIPTION_ID)
-            resourceGroupName: $(resourceGroupName)
-            serverName: $(serverName)
-            databaseName: $(databaseName)
-            sku: ${{ parameters.Sku_OffPeak }}
+- template: ../templates/task-azure-sql-scaling-common.yaml
+  parameters:
+    manualOverride: ${{ parameters.manualOverride }}
+    Sku_Peak: ${{ parameters.Sku_Peak }}
+    Sku_OffPeak:  ${{ parameters.Sku_OffPeak }}
